tests/paczka1/fuzzy1/78781799.err
Error in line 16: Z78yMj S624 88,4
Error in line 30: LeT3otv S443 36,7
Error in line 35: mowhO A837 15,3
